Change test find all heroes